test/syntaxerrors/TestDetectReservedKeyword3.jdc
System.out.println("hello world");

void return {
   //do something
}